Fix missing key release event for 'Q' key in browser windows

BUG=856868
R=sky

Change-Id: I4a1059e88aee7d6dadbb277742c770a11c1e7042
Reviewed-on: https://chromium-review.googlesource.com/1117274
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570964}
Former-commit-id: 18aedf278c1a57b3a1d5a6ee68c011d1e206aa84